# Construct_Robotics_Courses

./: README.md
Introductory_Courses/: README.md
Introductory_Courses/C++_for_Robotics/: README.md
Introductory_Courses/C++_for_Robotics/c_scripts/: CMakeLists.txt  package.xml
Introductory_Courses/C++_for_Robotics/c_scripts/src/: unit1_exercise.cpp  unit2_exercise.cpp  unit3_exercise.cpp  unit4_exercise.cpp  unit5_exercise.cpp  unit6_exercise.cpp
Introductory_Courses/C++_for_Robotics/rosbot_control/: CMakeLists.txt  package.xml
Introductory_Courses/C++_for_Robotics/rosbot_control/include/rosbot_control/: rosbot_class.h
Introductory_Courses/C++_for_Robotics/rosbot_control/src/: rosbot_class.cpp
Introductory_Courses/Introductory_Assessment/: README.md
Introductory_Courses/Linux_Scripts/: README.md
Introductory_Courses/Linux_Scripts/Advanced_Utilities_I/: Exercise_3_4.sh
Introductory_Courses/Linux_Scripts/Advanced_Utilities_II/: test_process.py
Introductory_Courses/Linux_Scripts/Example_Scripts/: Exercise_3_3.sh  Exercise_3_4.sh
Introductory_Courses/Linux_Scripts/src/: bb8_keyboard.py  move_bb8_circle.py  move_bb8_square.py
Introductory_Courses/Linux_for_Robotics/: README.md
Introductory_Courses/Linux_for_Robotics/Example_Scripts/: Exercise_3_3.sh  Exercise_3_4.sh  bash_script.sh
Introductory_Courses/Linux_for_Robotics/src/: move_bb8_forward_backward.py
Introductory_Courses/Python_Scripts/Capstone/: Python_Capstone.py
Introductory_Courses/Python_Scripts/Classes/: test_class.py
Introductory_Courses/Python_Scripts/Conditionals_and_Loops/: fav_movie.py
Introductory_Courses/Python_Scripts/Introduction/: arm_control.py
Introductory_Courses/Python_Scripts/Methods/: test_methods2.py  test_methods4.py
Introductory_Courses/Python_Scripts/Python_Essentials/: dictionaries.py  input.py  pyscript1.py  test_input.py
Introductory_Courses/Python_for_Robotics/: README.md
Introductory_Courses/Python_for_Robotics/1_Python_Essentials/: lists.py
Introductory_Courses/Python_for_Robotics/4_Classes/: robot_control_class.py
Introductory_Courses/Python_for_Robotics/5_Capstone/: robot_control_class_copy.py
Introductory_Courses/Python_for_Robotics/Conditionals_and_Loops/: test_for.py  test_if.py
Introductory_Courses/Python_for_Robotics/Methods/: test_methods1.py  test_methods3.py
Introductory_Courses/Python_for_Robotics/Python_Essentials/: input2.py  variables.py
Navigation/ROS_Nav_5Days/1_Map_Building/: map_config.rviz
Navigation/ROS_Nav_5Days/1_Map_Building/provide_map/: CMakeLists.txt  package.xml
Navigation/ROS_Nav_5Days/1_Map_Building/static_tf_publisher/: CMakeLists.txt  package.xml
Navigation/ROS_Nav_5Days/2_Localization/: local.rviz
Navigation/ROS_Nav_5Days/3_Path_Planning/: path_planner.rviz
Navigation/RTAB/my_rtab_package/: CMakeLists.txt  package.xml
Navigation/RTAB/my_rtab_package/launch/: my_rtab.launch
ROS_Courses/ROS_Python_5Days/: README.md
ROS_Courses/ROS_Python_5Days/2_ROS_Pubs_and_Subs/pubs_wall_rammer/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/2_ROS_Pubs_and_Subs/subs_nosy_nosy/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/2_ROS_Pubs_and_Subs/topics_quiz/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/3_ROS_Services/services_quiz/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/4_ROS_Python_Classes/Examples/: jedi_class.py
ROS_Courses/ROS_Python_5Days/4_ROS_Python_Classes/unit_8_exercise/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/5_ROS_Actions/actions_quiz/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/6_Debugging/my_log_print_example/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/ROS_Pubs_and_Subs/PUBS_wall_rammer/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/ROS_Pubs_and_Subs/SUBS_nosy_nosy/: CMakeLists.txt  package.xml
ROS_Courses/ROS_Python_5Days/ROS_Pubs_and_Subs/SUBS_nosy_nosy/launch/: age.launch  sample_topic_subscriber.launch
ROS_Courses/ROS_Python_5Days/ROS_Pubs_and_Subs/SUBS_nosy_nosy/scripts/: odom_printer.py
Robot_Design/Control/1_Controller_Configuration/my_robot_control/: CMakeLists.txt  package.xml
Robot_Design/Control/1_Controller_Configuration/om_control/: CMakeLists.txt  package.xml
Robot_Design/Control/2_Controller_Creation/my_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
Robot_Design/Control/3_HAL/rrbot_hardware_interface/: CMakeLists.txt  package.xml
Robot_Design/Control/4_quiz/project_controller/: CMakeLists.txt  package.xml
Robot_Design/Control/4_quiz/quiz_control/: CMakeLists.txt  package.xml
Robot_Design/ROS_TF/1_TF_Pub_and_Sub/tf_exercises_pkg_1/: CMakeLists.txt  package.xml
Robot_Design/ROS_TF/1_TF_pub_and_sub/tf_exercises_pkg/: CMakeLists.txt  package.xml
Robot_Design/ROS_TF/2_State_and_Joint_Pubs/non_static_assess/: CMakeLists.txt  package.xml
Robot_Design/ROS_TF/2_State_and_Joint_Pubs/tf_exercises_pkg_2/: CMakeLists.txt  package.xml
Robot_Design/ROS_TF/3_Static_TFs/tf_static_transform/: CMakeLists.txt  package.xml
Robot_Design/URDF/my_mira_description/: CMakeLists.txt  package.xml
Robot_Design/URDF/my_mira_description/config/: mira.yaml  mira_onecontroller.yaml
(+146 files in other folders)
